# sharepoint_test

./: .env.example  .pylintrc  main.py  pyproject.toml
.github/workflows/: check_version_number.yml  lint.yml
helpers/: ats_functions.py  config.py  sharepoint_class.py
processes/: application_handler.py  error_handling.py  finalize_process.py  process_item.py  queue_handler.py
